--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -6,9 +6,11 @@ on:
 
   workflow_dispatch:
 
-    push:
-      branches:
-        - master
+  push:
+    branches:
+    - master
+    - main
+    - develop
 
 jobs:
   generate:
